fixed spacing between flex rows on all trails page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -20,11 +20,17 @@ nav {
 
 
 .trail-cards {
-    margin: 50px;
+    margin: -20px;
+    padding: 20px;  
     border: 3px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     border-color: saddlebrown;
+}
+
+.trail-cards>* {
+    margin: 20px;
 }
 
 .btn {
@@ -40,6 +46,10 @@ nav {
 
 h1{ font-family: 'Bowlby One SC', cursive;
     margin: 50px;
+}
+
+.form-div {
+    padding: 15px 0 0 25px;
 }
 
 input[type=text] {
